Fix port button visibility bug
Before this fix, the port button would still show if there were none
defined in the courseware.

--- a/hastexo/public/css/main.css
+++ b/hastexo/public/css/main.css
@@ -16,7 +16,6 @@
     border-radius: 3px;
     box-shadow: inset 0 1px 0 0 #fff;
     color: #333;
-    display: inline-block;
     font-size: inherit;
     font-weight: bold;
     background-color: #f1f1f1;
